force-app/main/default/objects/Position__c/fields/DaysOpen__c.field-meta.xml
<CustomField>
    <fullName>DaysOpen__c</fullName>
    <description>The number of days a position has been (or was) open.</description>
    <formula>IF( ISBLANK( CloseDate__c ),
              TODAY() - OpenDate__c ,  CloseDate__c -  OpenDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>