force-app/main/default/objects/Position__c/fields/EducationalRequirements__c.field-meta.xml
<CustomField>
    <fullName>EducationalRequirements__c</fullName>
    <label>Educational Requirements</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>