force-app/main/default/objects/Position__c/fields/FunctionalArea__c.field-meta.xml
<CustomField>
    <fullName>FunctionalArea__c</fullName>
    <label>Functional Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>InformationTechnology</fullName>
                <label>Information Technology</label>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>RetailOperations</fullName>
                <label>Retail Operations</label>
            </value>
            <value>
                <fullName>Warehousing</fullName>
            </value>
            <value>
                <fullName>Technology Retail</fullName>
                <isActive>false</isActive>
                <label>Technology Retail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>