force-app/main/default/objects/Position__c/fields/HireBy__c.field-meta.xml
<CustomField>
    <fullName>HireBy__c</fullName>
    <defaultValue>TODAY() + 90</defaultValue>
    <label>Hire By</label>
    <type>Date</type>
</CustomField>