force-app/main/default/objects/Position__c/fields/HiringManager__c.field-meta.xml
<CustomField>
    <fullName>HiringManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>