force-app/main/default/objects/Position__c/fields/JobDescription__c.field-meta.xml
<CustomField>
    <fullName>JobDescription__c</fullName>
    <label>Job Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>