force-app/main/default/objects/Position__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>San Francisco CA</fullName>
            </value>
            <value>
                <fullName>Austin TX</fullName>
            </value>
            <value>
                <fullName>Boulder. CO</fullName>
            </value>
            <value>
                <fullName>London. England</fullName>
            </value>
            <value>
                <fullName>New York. NY</fullName>
            </value>
            <value>
                <fullName>Mumbai. India</fullName>
            </value>
            <value>
                <fullName>Sydeny. Australia</fullName>
            </value>
            <value>
                <fullName>Tokyo. Japan</fullName>
            </value>
            <value>
                <fullName>Karachi. Pakisthan</fullName>
            </value>
            <value>
                <fullName>Dhaka. Bangladesh</fullName>
            </value>
            <value>
                <fullName>Riyad. Saudi Arabia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>