force-app/main/default/objects/Position__c/fields/MaxPay__c.field-meta.xml
<CustomField>
    <fullName>MaxPay__c</fullName>
    <label>Max Pay</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>