force-app/main/default/objects/Position__c/fields/SkillsRequired__c.field-meta.xml
<CustomField>
    <fullName>SkillsRequired__c</fullName>
    <label>Skills Required</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>