force-app/main/default/objects/Position__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NewPosition</fullName>
                <default>true</default>
                <label>New Position</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>PendingApproval</fullName>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>ClosedNotApproved</fullName>
                <label>Closed - Not Approved</label>
            </value>
            <value>
                <fullName>ClosedFilled</fullName>
                <label>Closed - Filled</label>
            </value>
            <value>
                <fullName>OpenApproved</fullName>
                <label>Open Approved</label>
            </value>
            <value>
                <fullName>ClosedCanceled</fullName>
                <label>Closed Canceled</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>