force-app/main/default/objects/Position__c/fields/TravelRequired__c.field-meta.xml
<CustomField>
    <fullName>TravelRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Required</label>
    <type>Checkbox</type>
</CustomField>