force-app/main/default/objects/Position__c/validationRules/CloseDateRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CloseDateRule</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
     ISBLANK(CloseDate__c ),
    OR (
         ISPICKVAL(   Status__c , &apos;ClosedFilled&apos;),
         ISPICKVAL(   Status__c , &apos;ClosedNotApproved&apos;))
)</errorConditionFormula>
    <errorDisplayField>CloseDate__c</errorDisplayField>
    <errorMessage>Close Date must be specified when Status is set to &apos;Closed.&apos;</errorMessage>
</ValidationRule>