force-app/main/default/objects/Position__c/validationRules/MaxMinPay.validationRule-meta.xml
<ValidationRule>
    <fullName>MaxMinPay</fullName>
    <active>true</active>
    <description>Min Pay should never exceed Max Pay</description>
    <errorConditionFormula>MinPay__c   &gt;   MaxPay__c</errorConditionFormula>
    <errorDisplayField>MinPay__c</errorDisplayField>
    <errorMessage>Mix Pay cannot exceed Max Pay.</errorMessage>
</ValidationRule>