force-app/main/default/objects/Position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MaxPay__c</columns>
    <columns>MinPay__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>HiringManager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>